[package]
name = "robespierre-cache"
description = "robespierre - cache"
version = "0.2.0"
edition = "2018"
repository = "https://github.com/dblanovschi/robespierre"
license = "MIT OR Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

robespierre-models = { path = "../robespierre-models", version = "0.2.0" }
