[package]
name = "robespierre-client-core"
version = "0.3.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["cache", "events"]

cache = ["robespierre-cache"]
events = ["robespierre-events"]


[dependencies]
robespierre-models = { path = "../robespierre-models", version = "0.3.0" }
robespierre-http = { path = "../robespierre-http", version = "0.3.0" }
robespierre-cache = { path = "../robespierre-cache", version = "0.3.0", optional = true }
robespierre-events = { path = "../robespierre-events", version = "0.3.0", optional = true }

thiserror = "1"
async-trait = "0.1"
rusty_ulid = "0.11"
