[package]
name = "robespierre-events"
version = "0.1.0"
edition = "2018"
repository = "https://github.com/dblanovschi/robespierre"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
async-std = { version = "1", features = ["attributes", "tokio1", "std"] }
futures = "0.3"
async-tungstenite = { version = "0.14", features = [
    "tokio-runtime",
    "tokio-rustls-webpki-roots",
] }
tokio-rustls = "0.22"
tracing = "0.1"
async-trait = "0.1"

robespierre-models = { path = "../robespierre-models", version = "0.1.0" }
