[package]
name = "robespierre-fw-macros"
description = "robespierre - framework macros"
version = "0.3.1"
edition = "2018"
repository = "https://github.com/dblanovschi/robespierre"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version = "1", features = ["full", "extra-traits"]}
quote = "1"
proc-macro2 = "1"
