[package]
name = "robespierre-http"
version = "0.1.0"
edition = "2018"
repository = "https://github.com/dblanovschi/robespierre"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rustls"]
nativetls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls-tls"]

[dependencies]
reqwest = { version = "0.11.4", default-features = false, features = ["json", "multipart"] }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

robespierre-models = { path = "../robespierre-models", version = "0.1.0" }
