[package]
name = "robespierre-models"
version = "0.1.0"
edition = "2018"
repository = "https://github.com/dblanovschi/robespierre"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "1"
bitflags = "1"
chrono = { version = "0.4", features = ["serde"] }
