[package]
name = "robespierre-models"
description = "robespierre - model declarations"
version = "0.2.0"
edition = "2018"
repository = "https://github.com/dblanovschi/robespierre"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "1"
bitflags = "1"
chrono = { version = "0.4", features = ["serde"] }
