[package]
name = "robespierre"
description = "A revolt.chat API wrapper."
version = "0.0.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/dblanovschi/robespierre"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
