[package]
name = "robespierre"
description = "A revolt.chat API wrapper."
version = "0.0.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/dblanovschi/robespierre"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
robespierre-models = { path = "../robespierre-models", version = "0.1.0" }
robespierre-http = { path = "../robespierre-http", version = "0.1.0" }
robespierre-cache = { path = "../robespierre-cache", version = "0.1.0" }
robespierre-events = { path = "../robespierre-events", version = "0.1.0" }

async-trait = "0.1"
tracing = "0.1"