[package]
name = "robespierre"
description = "A revolt.chat API wrapper."
version = "0.1.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/dblanovschi/robespierre"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

interpreter = []
cache = ["robespierre-cache"]
framework = []
events = ["robespierre-events"]
framework-macros = ["framework", "robespierre-fw-macros"]

[dependencies]
robespierre-models = { path = "../robespierre-models", version = "0.1.0" }
robespierre-http = { path = "../robespierre-http", version = "0.1.0" }
robespierre-cache = { path = "../robespierre-cache", version = "0.1.0", optional = true }
robespierre-events = { path = "../robespierre-events", version = "0.1.0", optional = true }
robespierre-fw-macros = { path = "../robespierre-fw-macros", version = "0.1.0", optional = true }

async-trait = "0.1"
async-std = "1"
tracing = "0.1"
rusty_ulid = "0.11"
thiserror = "1"
smallvec = "1"
tokio = { version = "1", features = ["full"] }
typemap = "0.3"
