[package]
name = "example-bot-lowlevel"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
robespierre-models = { path = "../../crates/robespierre-models" }
robespierre-events = { path = "../../crates/robespierre-events" }
robespierre-cache = { path = "../../crates/robespierre-cache" }
robespierre-http = { path = "../../crates/robespierre-http" }

tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2.20"
async-trait = "0.1"
rusty_ulid = "0.11"