[package]
name = "example-bot"
version = "0.1.0"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
robespierre-models = { path = "../../crates/robespierre-models" }
robespierre-events = { path = "../../crates/robespierre-events" }
robespierre-http = { path = "../../crates/robespierre-http" }
robespierre = { path = "../../crates/robespierre" }
rusty_ulid = "0.11"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2.20"
serde_json = "1"
