[package]
name = "example-self-bot-manual-event-loop"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
robespierre-cache = {path = "../../crates/robespierre-cache"}
robespierre-http = {path = "../../crates/robespierre-http"}
robespierre-events = {path = "../../crates/robespierre-events"}
robespierre-models = {path = "../../crates/robespierre-models"}
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"
async-trait = "0.1"
rusty_ulid = "0.11"
