[package]
name = "ping-reply-pong"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
robespierre = { path = "../../crates/robespierre", features = ["cache", "events", "framework", "framework-macros"] }
robespierre-cache = {path = "../../crates/robespierre-cache"}
robespierre-http = {path = "../../crates/robespierre-http"}
robespierre-events = {path = "../../crates/robespierre-events"}
robespierre-models = {path = "../../crates/robespierre-models"}
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"