[package]
name = "command-pub"
version = "0.1.0"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
robespierre = { path = "../../crates/robespierre" }
robespierre-cache = {path = "../../crates/robespierre-cache"}
robespierre-http = {path = "../../crates/robespierre-http"}
robespierre-events = {path = "../../crates/robespierre-events"}
robespierre-models = {path = "../../crates/robespierre-models"}
